src/objects/Game_Variable__c.object
<CustomObject>
    <description>holder for game info.</description>
    <fields>
        <fullName>Fruits__c</fullName>
        <label>Fruits</label>
        <picklist>
            <picklistValues>
                <fullName>Apples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grapes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bananas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oranges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peachs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lemons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watermelons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strawberries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rasberries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blueberries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coconuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mangoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pineapples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiwis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legislatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporations</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Game_Interval__c</fullName>
        <description>in milliseconds</description>
        <inlineHelpText>in milliseconds</inlineHelpText>
        <label>Game Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Game_Length__c</fullName>
        <description>Timer for game</description>
        <label>Game Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxSwing__c</fullName>
        <description>Whole number = cents</description>
        <inlineHelpText>Whole number = cents</inlineHelpText>
        <label>MaxSwing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinSwing__c</fullName>
        <description>Whole Number = cents</description>
        <inlineHelpText>Whole Number = cents</inlineHelpText>
        <label>MinSwing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Cash__c</fullName>
        <label>Starting Cash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Price__c</fullName>
        <description>whole number = dollar</description>
        <inlineHelpText>whole number = dollar</inlineHelpText>
        <label>Starting Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Game Variable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Game Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>